# shadow

./: .gitmodules  README.md
sdp/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md
sdp/contracts/: foundry.toml
sdp/contracts/script/: Deploy.s.sol
sdp/contracts/src/: SdpSettlement.sol
sdp/contracts/test/: SdpSettlement.t.sol
sdp/ecloud/: Cargo.toml  Dockerfile
sdp/ecloud/kms/: Cargo.toml
sdp/ecloud/kms/src/: lib.rs
sdp/ecloud/matching-engine/: Cargo.toml
sdp/ecloud/matching-engine/src/: lib.rs
sdp/ecloud/pre-screener/: Cargo.toml
sdp/ecloud/pre-screener/src/: lib.rs
sdp/ecloud/relayer/: Cargo.toml
sdp/ecloud/relayer/src/: lib.rs
sdp/ecloud/shared/: Cargo.toml
sdp/ecloud/shared/src/: lib.rs
sdp/sdp-ecloud/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
sdp/sdp-ecloud/src/: main.rs
tin/: package-lock.json  package.json  plan.txt
tin/src/app/: globals.css  layout.tsx  page.tsx
tin/src/app/api/sdp/[...path]/: route.ts
tin/src/components/: ChartSection.tsx  PairList.tsx  PairRow.tsx
tin/src/components/shadow/: AttestationBar.tsx  FillFeed.tsx  Header.tsx  MyOrders.tsx  OrderPanel.tsx
tin/src/configs/: tradingPairs.ts
tin/src/lib/: alchemyPrice.ts  flashbots.ts  sdpClient.ts
tin/src/types/: ethereum.d.ts
tin/src/utils/: tradingview.ts
