[package]
name = "sdp-ecloud"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "sdp-ecloud"
path = "src/main.rs"

[dependencies]
# Our ecloud crates
sdp-shared          = { path = "../ecloud/shared" }
sdp-matching-engine = { path = "../ecloud/matching-engine" }
sdp-pre-screener    = { path = "../ecloud/pre-screener" }
sdp-kms             = { path = "../ecloud/kms" }
sdp-relayer         = { path = "../ecloud/relayer" }

# HTTP server
axum        = "0.7"
tower-http  = { version = "0.5", features = ["cors"] }
tokio       = { version = "1", features = ["full"] }

# Ethereum
ethers      = { version = "2", default-features = false, features = ["rustls"] }
ethers-core = { version = "2", default-features = false }

# Utils
dotenvy  = "0.15"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
uuid     = { version = "1", features = ["v4", "serde"] }
