[package]
name = "sdp-kms"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = []
tee = []

[dependencies]
sdp-shared = { path = "../shared" }
ethers-core = { version = "2", default-features = false }
ethers-signers = { version = "2", default-features = false }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
