[package]
name = "sdp-matching-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = []
tee = []

[dependencies]
sdp-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
