[package]
name = "sdp-relayer"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = []
tee = []

[dependencies]
sdp-shared = { path = "../shared" }
sdp-kms = { path = "../kms" }
ethers = { version = "2", default-features = false, features = ["rustls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
